--- a/input.css
+++ b/input.css
@@ -17,9 +17,30 @@
 
 
 .styles_li {
-  @apply text-xs font-semibold text-gray-400 font-family-base transition-colors duration-300 hover:text-blue-400;
+  @apply text-xs font-semibold text-white font-family-base transition-all duration-300 
+         hover:text-[#19e6f7];
 }
 
 .li_titulos{
-  @apply text-xl font-semibold text-blue-50 font-family-base transition-colors duration-300 hover:text-blue-400 text-shadow-md text-shadow-black;
+  @apply text-[22px] font-semibold text-[#12b1be] font-family-base transition-colors duration-300  text-shadow-md text-shadow-gray-800; ;
+}
+
+.li_volver {
+  @apply text-[12px] text-blue-300 font-medium font-family-base flex items-center gap-2 
+         transition-all duration-300 hover:text-[#19e6f7] hover:underline hover:underline-offset-4;
+}
+
+.li_contacto {
+  @apply text-sm text-gray-200 font-medium flex items-center gap-2  
+         hover:text-[#19e6f7] transition-all duration-300 font-mono;
+}
+
+.li_contacto img {
+  @apply w-4 h-4 opacity-80 hover:opacity-100 transition-all duration-300;
+}
+
+.btn_moderno {
+    @apply px-5 py-2 rounded-full cursor-pointer border-0 bg-blue-800 text-white 
+           shadow-[0_0_8px_rgba(0,0,0,0.05)] tracking-[1.5px] uppercase 
+           text-[15px] transition-all duration-500 ease-in-out font-family-base;
 }
