--- a/input.css
+++ b/input.css
@@ -2,8 +2,9 @@
 
 @font-face {
   font-family: 'Titulos';
-  src: url('/assets/fonts/PlayfairDisplay-Regular.ttf')
-    format('truetype');
+  src: url('assets/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
+
+
 }
 
 @theme {
