--- a/input.css
+++ b/input.css
@@ -2,10 +2,10 @@
 
 @font-face {
   font-family: 'Titulos';
-  src: url('assets/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
-
-
+  src: url('../FARMACIA_TUP/assets/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
 }
+
+
 
 @theme {
   /* Colores */
@@ -18,16 +18,16 @@
 
 
 .styles_li {
-  @apply text-xs font-semibold text-white font-family-base transition-all duration-300 
+  @apply font-semibold text-white font-family-base transition-all duration-300 
          hover:text-[#19e6f7];
 }
 
 .li_titulos{
-  @apply text-[22px] font-semibold text-[#12b1be] font-family-base transition-colors duration-300  text-shadow-md text-shadow-gray-800; ;
+  @apply text-[20px] font-semibold text-[#12b1be] font-family-base transition-colors duration-300  text-shadow-md text-shadow-gray-800; ;
 }
 
 .li_volver {
-  @apply text-[12px] text-blue-300 font-medium font-family-base flex items-center gap-2 
+  @apply text-[14px] text-blue-300 font-medium font-family-base flex items-center gap-2 
          transition-all duration-300 hover:text-[#19e6f7] hover:underline hover:underline-offset-4;
 }
 
@@ -41,7 +41,8 @@
 }
 
 .btn_moderno {
-    @apply px-5 py-2 rounded-full cursor-pointer border-0 bg-blue-800 text-white 
-           shadow-[0_0_8px_rgba(0,0,0,0.05)] tracking-[1.5px] uppercase 
-           text-[15px] transition-all duration-500 ease-in-out font-family-base;
+    @apply px-5 py-2 rounded-full cursor-pointer border-0 bg-blue-950 text-white font-family-base;
+}
+.active {
+    @apply text-blue-950;
 }
